--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
     <!-- Participants -->
     <section class="section" id="participants">
       <h2>Confirmed Participants</h2>
+      Unfortunately, due to the U.S. federal government shutdown, several participants were not able to attend.
       <div class="people">
 <div class="person"><div class="name">Aditya Rajagopal</div><div class="affil">Esperto Medical</div></div>
 <div class="person"><div class="name">Austin Carson</div><div class="affil">SeedAI</div></div>
