--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Collaboration for Autonomous Science Instruments — Workshop</title>
+  <title>Catalyzing Collaborations for Autonomous Science Instruments — Workshop</title>
   <style>
     :root {
       --bg: #f8f6f3;
