Remove SVG placeholder for group photo

--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
       text-decoration: underline;
     }
 
+    .group-photo {
+      margin-top: 2rem;
+      text-align: center;
+    }
+
+    .group-photo img {
+      width: 100%;
+      max-width: 780px;
+      border-radius: 16px;
+      border: 1px solid var(--border);
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.08);
+    }
+
     @media (max-width: 720px) {
       .agenda .card { overflow-x: auto; }
       .agenda table { min-width: 520px; }
@@ -267,6 +280,14 @@
         <div class="person"><img src="assets/jie_xu.jpg" alt="Jie Xu"/><div class="name">Jie Xu</div><div class="affil">Argonne National Laboratory</div></div>
         <div class="person"><img src="assets/milad_abolhasani.jpg" alt="Milad Abolhasani"/><div class="name">Milad Abolhasani</div><div class="affil">North Carolina State University</div></div>
         <div class="person"><img src="assets/shijing_sun.jpg" alt="Shijing Sun"/><div class="name">Shijing Sun</div><div class="affil">University of Cambridge</div></div>
+      </div>
+    </section>
+
+    <!-- Group Photo -->
+    <section class="section" id="group-photo">
+      <h2>Workshop Group Photo</h2>
+      <div class="group-photo">
+        <img src="assets/workshop-group-photo.jpg" alt="Participants gathered for the workshop group photo" />
       </div>
     </section>
 
