--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <section class="section" id="group-photo">
       <h2>Workshop Group Photo</h2>
       <div class="group-photo">
-        <img src="assets/workshop-group-photo.jpg" alt="Participants gathered for the workshop group photo" />
+        <img src="assets/conference_photo.jpg" alt="Participants gathered for the workshop group photo" />
       </div>
     </section>
 
